Kunden Namen werden im Frontend angezeigt

--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -160,7 +160,7 @@
       <!-- Orders werden in Liste geladen -->
       <tr *ngFor="let order of filterOrders()">
         <td>{{order.id}}</td>
-        <td>ToDo</td> <!-- customer Name -->
+        <td>{{order.customerName}}</td>
         <td>{{dataService.getMeatPieceFromID(order.meatPieceId!)?.name}}</td>
         <td>{{order.amount}}</td>
         <td>{{order.deposit}}</td>
