--- a/frontend/src/app/sales-day/sales-day.component.scss
+++ b/frontend/src/app/sales-day/sales-day.component.scss
@@ -77,6 +77,11 @@ td {
     margin-right: 2%;
 }
 
+//Searchbar Customer
+#serachCustomerDiv{
+    margin-right: 2%;
+}
+
 //Searchbar Anmerkung
 #searchNoteDiv {
     margin-right: 2%;
