--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -140,9 +140,9 @@
           <textarea id="notes" class="form-control" rows="1" style="height: 36px; overflow-y: hidden;"
             oninput="this.style.height = 'auto'; this.style.height = (this.scrollHeight) + 'px';"
             [(ngModel)]="notes"></textarea>
-        <td>
-          <button class="btn btn-success" (click)="addOrder()">
-            +
+        <td style="text-align: center;">
+          <button (click)="addOrder()">
+            <mat-icon style="font-size: 24px;">add</mat-icon>
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
             <li *ngFor="let category of dataService.categories()" class="dropdown-submenu"
@@ -171,10 +171,13 @@
         <td>{{order.amount}}</td>
         <td>{{order.deposit}}</td>
         <td>{{order.notes}}</td>
-        <td>
-          <button class="btn btn-danger" (click)="deleteOrder(order)">
-            -
+        <td style="text-align: center;">
+          <button>
+            <mat-icon color="primary" style="font-size: 24px;">create</mat-icon>
           </button>
+          <button (click)="deleteOrder(order)">
+            <mat-icon color="warn" style="font-size: 24px;">clear</mat-icon>
+          </button>          
         </td>
       </tr>
     </tbody>
