--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,8 +1,7 @@
 <div class="sidebar">
   <div id="navBarAlignment">
     <!--Navbar Header-->
-    <a class="nav-link" id="innviertlerFauchos" (click)="handleNavLinkClick('innviertlerGauchos')"
-      [class.active-link]="activeLink === 'innviertlerGauchos'">
+    <a class="nav-link" id="innviertlerFauchos">
       Innviertler Gauchos
     </a>
     <!--NavBar Menu-->
