--- a/frontend/src/app/stock-overview/stock-overview.component.html
+++ b/frontend/src/app/stock-overview/stock-overview.component.html
@@ -1,5 +1,33 @@
+<!--
 <div style="margin-bottom: 30px;" class="row row-cols-1 row-cols-md-6 g-6">
   <app-single-category-info *ngFor="let category of dataService.categories()" [category]="category"
     (click)="categoryClicked(category)">
   </app-single-category-info>
 </div>
+-->
+
+<table id="table" class="table table-hover">
+  <thead>
+    <tr>
+      <th class="header" scope="col">
+        Kategorie
+      </th>
+      <th class="header" scope="col">
+        Bestand
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let category of categories">
+      <td (click)="toggleCategory(category)">
+        {{ category.name }}
+        <ul *ngIf="selectedCategory === category">
+          <li *ngFor="let item of getItemsForCategory(category)">
+            {{ item }}
+          </li>
+        </ul>
+      </td>
+      <td>Bestand anzeige KG (todo)</td>
+    </tr>
+  </tbody>
+</table>
