Verkaufstag margin design fixed

--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -1,4 +1,4 @@
-<body style="margin-left: 10px;">
+<body>
   <div>
     <!-- Verkaufstag anzneige -->
     <h1>Verkaufstag: {{dataService.selectedSalesDay.value.name}}</h1>
