--- a/frontend/src/app/sales-day/sales-day.component.scss
+++ b/frontend/src/app/sales-day/sales-day.component.scss
@@ -79,12 +79,18 @@ td {
 
 //Searchbar Customer
 #serachCustomerDiv {
+    margin-left: 0%;
     margin-right: 2%;
 }
 
 //Searchbar Anmerkung
 #searchNoteDiv {
-    margin-right: 2%;
+    margin-right: 0%;
+}
+
+//Verkaufstag infos
+#infoDiv {
+    margin-left: 0%;
 }
 
 //Keine Ahnung
