--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -21,6 +21,7 @@
 <div class="oxen-container">
   <h3>Ochsen:</h3>
   <div class="oxen-list">
+    <p class="oxText" *ngIf="oxen.length===0">Noch keiner vorhanden</p>
     <div *ngFor="let ox of oxen" class="ox-item">{{ ox }}</div>
     <!-- Plus-Symbol -->
     <button *ngIf="showPlusButton" class="btn btn-plus" (click)="toggleOxInput()">+</button>
